--- a/notebooks/sentiment_training.ipynb
+++ b/notebooks/sentiment_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "315de006",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "f3d2b37c",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ed39fa7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear y ajustar el tokenizer\n",
+    "\n",
+    "# Aseguramos de que todos sean strings\n",
+    "X_train = x_train.astype(str)\n",
+    "\n",
+    "# Convertimos a lista para que Tokenizer lo acepte\n",
+    "X_train = X_train.tolist()\n",
+    "\n",
+    "tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")\n",
+    "tokenizer.fit_on_texts(X_train)  # X_train = tus textos de entrenamiento"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d4cc390e",
    "metadata": {},
@@ -61,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "25a4a77c",
    "metadata": {},
    "outputs": [
@@ -80,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "998e37d7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "50df5082",
    "metadata": {},
    "outputs": [
@@ -107,20 +126,20 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 41ms/step - accuracy: 0.7924 - loss: 0.4368 - val_accuracy: 0.8516 - val_loss: 0.3468\n",
+      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 42ms/step - accuracy: 0.7845 - loss: 0.4375 - val_accuracy: 0.8450 - val_loss: 0.3484\n",
       "Epoch 2/3\n",
-      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 42ms/step - accuracy: 0.8921 - loss: 0.2679 - val_accuracy: 0.8494 - val_loss: 0.3497\n",
+      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 41ms/step - accuracy: 0.8900 - loss: 0.2676 - val_accuracy: 0.8437 - val_loss: 0.3493\n",
       "Epoch 3/3\n",
-      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 43ms/step - accuracy: 0.9179 - loss: 0.2140 - val_accuracy: 0.8394 - val_loss: 0.3855\n"
+      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 42ms/step - accuracy: 0.9178 - loss: 0.2126 - val_accuracy: 0.8420 - val_loss: 0.3896\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x1ea5a5514e0>"
+       "<keras.src.callbacks.history.History at 0x23779db00d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,14 +151,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "c323a3f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo y tokenizer guardados en la carpeta 'model'\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "# Creamos carpeta 'model' \n",
+    "os.makedirs('../model', exist_ok=True)\n",
+    "\n",
     "# Guardamos el modelo\n",
     "# Antiguo guardado: model.save('sentiment_model.h5')\n",
-    "model.save('sentiment_model.keras')"
+    "model.save('../model/sentiment_model.keras')\n",
+    "\n",
+    "# Guardar tokenizer\n",
+    "with open(\"../model/tokenizer.pickle\", \"wb\") as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "print(\"Modelo y tokenizer guardados en la carpeta 'model'\")"
    ]
   }
  ],
